🚧 Fix for ticket cell.

--- a/ios-client/event-manager-ios/Storyboards/Profile.storyboard
+++ b/ios-client/event-manager-ios/Storyboards/Profile.storyboard
@@ -402,7 +402,7 @@
         <scene sceneID="pc4-bq-u7O">
             <objects>
                 <tableViewController storyboardIdentifier="TicketsTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="PM2-F4-bJR" customClass="TicketsTableViewController" customModule="event_manager_ios" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YNv-2i-Ffp">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YNv-2i-Ffp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
